<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/abc_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/abc_news" />
        <item
            android:id="@+id/bbc_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bbc_news" />

        <item
            android:id="@+id/google_news"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/google_news" />


        <item
            android:id="@+id/buzzfeed"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/buzzfeed" />

        <item
            android:id="@+id/espn"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/espn" />

        <item
            android:id="@+id/ign"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/ign" />
    </group>


</menu>
